Missing include in g1RegionToSpaceMapper.hpp results in unresolved symbol of fastdebug build without precompiled headers

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b29

        The VM does not startup because of an unresolved reference to CHeapObj<(MemoryType)5>::delete(void*) for a fastdebug build without precompiled headers on Linux with gcc 4.8.2-16.

        The problem is a missing include of allocation.inline.hpp in g1RegionToSpaceMapper.cpp (and allocation.hpp in the hpp file).

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: